# Minecraft-server-query

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: main.c
include/: minecraft_server_query_api.h
src/: error.c  main.c
